--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissor</title>
+    <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
   </head>
   <body>
+
+    <div class="game-wrapper">
     <p>Player Score:<span id="playerScore"> 0</span></p>
     <p>Computer Score:<span id="computerScore"> 0</span></p>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissor">Scissor</button>
+    <div id ="choices"></div>
+    <hr>
     <div id="scoreboard"></div>
+    </div>
+
   </body>
 </html>
